--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body, html {
     justify-content: center;
     align-items: center;
     background-color: #e0e0e0;
+    color: #FFFFFF;
 }
 
 .container {
